create chat models and views and bug fix

--- a/templates/base/base_template.html
+++ b/templates/base/base_template.html
@@ -30,7 +30,7 @@
           <ul class="navbar-nav ml-auto">
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="accounts/profile/{{user.username}}">wellcome {{user.username}}</a>
+                    <a href="/accounts/profile/{{user.username}}">wellcome {{user.username}}</a>
                   <!-- </li>
                   <li class="nav-item"> --><br>
                   <button class="btn btn-outline-info" type="button" name="button">
